syntax = "proto3";
package home_audio_manager;

service RpcDeviceService {
    rpc GetDevices (Empty) returns (GetDevicesResponse);
}

message Empty {}

message GetDevicesResponse {
    repeated string names = 1;
}
